syntax = "proto3";

package racing;

service MeetingService {
    rpc ListByDate(ListByDateRequest) returns (ListByDateResponse) {}
    rpc GetByID(GetByIDRequest) returns (GetByIDResponse) {}
    rpc Add(AddRequest) returns (AddResponse) {}
    rpc AddRange(AddRangeRequest) returns (AddRangeResponse) {}
    rpc Update (UpdateRequest) returns (UpdateResponse);
    rpc Delete (DeleteRequest) returns (DeleteResponse);
}

message Meeting {
    string meeting_id = 1;
    string source_id = 2;
    string name = 3;
    string country = 4;
    string race_type = 5;
    int64 scheduled_start = 6;
    repeated string race_ids = 7;
}

message ListByDateRequest {
    string start_date = 1;
}

message ListByDateResponse {
    repeated Meeting meetings = 1;
}

message GetByIDRequest {
    string meeting_id = 1;
}

message GetByIDResponse {
    Meeting meeting = 1;
}

message AddRequest {
    Meeting meeting = 1;
}

message AddRangeRequest {
    repeated Meeting meetings = 1;
}

message AddResponse {
    bool created = 1;
    Meeting meeting = 2;
}

message AddRangeResponse {
    repeated AddResponse responses = 1;
}

message UpdateRequest {
    Meeting meeting = 1;
}

message UpdateResponse {
    bool updated = 1;
}

message DeleteRequest {
    string id = 1;
}

message DeleteResponse {
    bool deleted = 1;
}